--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "feed": "^4.2.2",
     "lodash": "^4.17.21",
     "luxon": "^3.2.1",
+    "path-to-regexp": "^6.2.1",
     "reading-time": "^1.5.0",
     "sass": "^1.58.0",
     "sharp": "^0.31.3",
@@ -40,6 +41,7 @@
   "devDependencies": {
     "@types/luxon": "^3.2.0",
     "hast-util-select": "^5.0.5",
+    "netlify": "^13.1.2",
     "vercel": "^28.15.0",
     "vitest": "^0.28.4",
     "vitest-fixture": "^0.5.1",
