--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   },
   "author": "David Demaree (david@demaree.me)",
   "dependencies": {
+    "@apollo/client": "^3.7.10",
     "@astrojs/image": "^0.14.0",
     "@astrojs/mdx": "^0.16.0",
+    "@astrojs/react": "^2.1.0",
+    "@astrojs/solid-js": "^2.1.0",
     "@astrojs/svelte": "^2.0.1",
     "@astrojs/tailwind": "^3.0.1",
     "@astrojs/vercel": "^3.0.1",
@@ -24,21 +27,40 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/pro-regular-svg-icons": "^6.2.1",
     "@fortawesome/pro-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/sharp-solid-svg-icons": "^6.2.1",
     "@lottiefiles/svelte-lottie-player": "^0.3.0",
+    "@motionone/solid": "^10.15.5",
+    "@nanostores/react": "^0.4.1",
     "@tailwindcss/container-queries": "^0.1.0",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "astro": "^2.0.4",
     "cheerio": "1.0.0-rc.12",
+    "cloudinary": "^1.35.0",
     "clsx": "^1.2.1",
     "feed": "^4.2.2",
+    "framer-motion": "^10.2.3",
+    "hast-util-from-html": "^1.0.1",
+    "hast-util-to-text": "^3.1.2",
+    "hastscript": "^7.2.0",
     "jsdom": "^21.1.0",
     "lodash": "^4.17.21",
     "luxon": "^3.2.1",
+    "nanostores": "^0.7.4",
     "path-to-regexp": "^6.2.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "reading-time": "^1.5.0",
+    "rehype-parse": "^8.0.4",
+    "rehype-stringify": "^9.0.3",
     "sass": "^1.58.0",
     "sharp": "^0.31.3",
-    "svelte": "^3.54.0"
+    "solid-js": "^1.4.3",
+    "svelte": "^3.54.0",
+    "twitter-text": "^3.1.0",
+    "unified": "^10.1.2",
+    "unist-util-visit": "^4.1.2"
   },
   "devDependencies": {
     "@types/luxon": "^3.2.0",
