--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "astro": "^2.0.4",
+    "balance-text": "^3.3.1",
     "cheerio": "1.0.0-rc.12",
     "cloudinary": "^1.35.0",
     "clsx": "^1.2.1",
