--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "sharp": "^0.31.3",
     "solid-js": "^1.4.3",
     "svelte": "^3.54.0",
+    "tailwindcss": "0.0.0-insiders.7b4385c",
     "twitter-text": "^3.1.0",
     "unified": "^10.1.2",
     "unist-util-visit": "^4.1.2",
