--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@apollo/client": "^3.7.10",
     "@astrojs/image": "^0.14.0",
     "@astrojs/mdx": "^0.16.0",
+    "@astrojs/netlify": "^2.2.0",
     "@astrojs/react": "^2.1.0",
     "@astrojs/solid-js": "^2.1.0",
     "@astrojs/svelte": "^2.0.1",
@@ -34,7 +35,7 @@
     "@tailwindcss/container-queries": "^0.1.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "astro": "^2.0.4",
+    "astro": "^2.1.2",
     "balance-text": "^3.3.1",
     "cheerio": "1.0.0-rc.12",
     "cloudinary": "^1.35.0",
