--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ _site
 .vercel
 .netlify
 
-
 # build output
 .next
 dist
@@ -94,3 +93,7 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+__next
+_old*
+.astro
