--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ddemaree/website",
-  "version": "23.1.0",
+  "version": "23.3.0",
   "description": "",
   "private": true,
   "scripts": {
@@ -19,45 +19,52 @@
     "@fortawesome/pro-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/sharp-solid-svg-icons": "^6.2.1",
-    "@next/font": "13.1.1",
+    "@nanostores/react": "^0.4.1",
     "@tailwindcss/container-queries": "^0.1.0",
     "@tailwindcss/typography": "^0.5.8",
-    "@types/chroma-js": "^2.1.4",
-    "@types/dompurify": "^2.4.0",
-    "@types/jsdom": "^20.0.1",
     "@types/lodash": "^4.14.191",
     "@types/luxon": "^3.1.0",
-    "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@vercel/edge": "^0.2.1",
     "@vercel/og": "^0.0.19",
     "autoprefixer": "^10.4.13",
+    "balance-text": "^3.3.1",
     "cheerio": "1.0.0-rc.12",
-    "chroma-js": "^2.4.2",
+    "cloudinary": "^1.35.0",
     "clsx": "^1.2.1",
-    "domino": "^2.1.6",
-    "dompurify": "^2.4.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "feed": "^4.2.2",
-    "html-react-parser": "^3.0.6",
-    "jsdom": "^20.0.3",
+    "framer-motion": "^10.2.5",
+    "hast-util-from-html": "^1.0.1",
+    "hast-util-select": "^5.0.5",
+    "hast-util-to-text": "^3.1.2",
+    "hastscript": "^7.2.0",
     "lodash": "^4.17.21",
     "luxon": "^3.1.1",
-    "next": "13.1.1",
-    "node-loader": "^2.0.0",
-    "phpunserialize": "^1.3.0",
+    "nanostores": "^0.7.4",
+    "next": "13.2.4",
     "postcss": "^8.4.20",
     "postcss-lab-function": "^4.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "reading-time": "^1.5.0",
+    "rehype-infer-reading-time-meta": "^1.1.0",
+    "rehype-parse": "^8.0.4",
+    "rehype-react": "^7.1.2",
+    "rehype-stringify": "^9.0.3",
     "sass": "^1.57.1",
-    "sharp": "^0.31.3",
-    "tailwindcss": "^3.2.4",
-    "typescript": "4.9.4"
+    "tailwindcss": "0.0.0-insiders.c33c523",
+    "twitter-text": "^3.1.0",
+    "unified": "^10.1.2",
+    "unist-util-visit": "^4.1.2"
   },
   "devDependencies": {
+    "@types/twitter-text": "^3.1.5",
+    "netlify": "^13.1.3",
+    "rimraf": "^4.4.0",
+    "typescript": "4.9.4",
     "vercel": "^28.10.0",
     "zx": "^7.1.1"
   }
