--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "autoprefixer": "^10.4.13",
     "balance-text": "^3.3.1",
     "cheerio": "1.0.0-rc.12",
+    "chroma-js": "^2.4.2",
     "cloudinary": "^1.35.0",
     "clsx": "^1.2.1",
     "eslint": "8.30.0",
@@ -61,6 +62,7 @@
     "unist-util-visit": "^4.1.2"
   },
   "devDependencies": {
+    "@types/chroma-js": "^2.4.0",
     "@types/twitter-text": "^3.1.5",
     "netlify": "^13.1.3",
     "rimraf": "^4.4.0",
