--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tailwindcss/typography": "^0.5.8",
     "@types/lodash": "^4.14.191",
     "@types/luxon": "^3.1.0",
+    "@types/mdx": "^2.0.3",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@vercel/edge": "^0.2.1",
