--- a/package.json
+++ b/package.json
@@ -26,14 +26,12 @@
     "@types/lodash": "^4.14.191",
     "@types/luxon": "^3.1.0",
     "@types/mdx": "^2.0.3",
-    "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@vercel/edge": "^0.2.1",
     "@vercel/og": "^0.0.19",
     "autoprefixer": "^10.4.13",
     "balance-text": "^3.3.1",
     "cheerio": "1.0.0-rc.12",
-    "chroma-js": "^2.4.2",
     "cloudinary": "^1.35.0",
     "clsx": "^1.2.1",
     "eslint": "8.30.0",
@@ -66,9 +64,12 @@
   },
   "devDependencies": {
     "@types/chroma-js": "^2.4.0",
+    "@types/react": "18.0.26",
     "@types/twitter-text": "^3.1.5",
+    "chroma-js": "^2.4.2",
     "netlify": "^13.1.3",
     "rimraf": "^4.4.0",
+    "style-dictionary": "^3.7.2",
     "typescript": "4.9.4",
     "vercel": "^28.10.0",
     "zx": "^7.1.1"
