--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/pro-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/sharp-solid-svg-icons": "^6.2.1",
+    "@headlessui/react": "^1.7.13",
     "@nanostores/react": "^0.4.1",
     "@next/mdx": "^13.2.4",
     "@tailwindcss/container-queries": "^0.1.0",
