--- a/package.json
+++ b/package.json
@@ -53,13 +53,14 @@
     "postcss-lab-function": "^4.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-youtube": "^10.1.0",
     "reading-time": "^1.5.0",
     "rehype-infer-reading-time-meta": "^1.1.0",
     "rehype-parse": "^8.0.4",
     "rehype-react": "^7.1.2",
     "rehype-stringify": "^9.0.3",
     "sass": "^1.57.1",
-    "tailwindcss": "0.0.0-insiders.3c4cfb5",
+    "tailwindcss": "3.3.1",
     "twitter-text": "^3.1.0",
     "unified": "^10.1.2",
     "unist-util-visit": "^4.1.2"
