--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "rehype-react": "^7.1.2",
     "rehype-stringify": "^9.0.3",
     "sass": "^1.57.1",
+    "shiki": "^0.14.1",
     "tailwindcss": "3.3.1",
     "twitter-text": "^3.1.0",
     "unified": "^10.1.2",
