--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "autoprefixer": "^10.4.13",
     "balance-text": "^3.3.1",
     "cheerio": "1.0.0-rc.12",
+    "chroma-js": "^2.4.2",
     "cloudinary": "^1.35.0",
     "clsx": "^1.2.1",
+    "colorthief": "^2.4.0",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "fathom-client": "^3.5.0",
@@ -74,7 +76,6 @@
     "@types/react": "18.0.26",
     "@types/twitter-text": "^3.1.5",
     "@vitejs/plugin-react": "3.1.0",
-    "chroma-js": "^2.4.2",
     "jsdom": "^21.1.1",
     "rimraf": "^4.4.0",
     "style-dictionary": "^3.7.2",
