--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@headlessui/react": "^1.7.13",
     "@nanostores/react": "^0.4.1",
     "@next/mdx": "^13.2.4",
+    "@popperjs/core": "^2.11.7",
     "@tailwindcss/container-queries": "^0.1.0",
     "@tailwindcss/typography": "^0.5.8",
     "@types/lodash": "^4.14.191",
@@ -57,6 +58,7 @@
     "postcss-lab-function": "^4.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-popper": "^2.3.0",
     "react-wrap-balancer": "^0.4.0",
     "react-youtube": "^10.1.0",
     "reading-time": "^1.5.0",
@@ -80,6 +82,10 @@
     "@types/twitter-text": "^3.1.5",
     "@vitejs/plugin-react": "3.1.0",
     "jsdom": "^21.1.1",
+    "prettier": "^2.8.7",
+    "prettier-plugin-css-order": "^1.3.0",
+    "prettier-plugin-organize-imports": "^3.2.2",
+    "prettier-plugin-tailwindcss": "^0.2.7",
     "rimraf": "^4.4.0",
     "style-dictionary": "^3.7.2",
     "typescript": "4.9.4",
