--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.16.6",
     "@astrojs/mdx": "^0.19.0",
     "@astrojs/react": "^2.1.1",
     "@astrojs/tailwind": "^3.1.1",
@@ -44,6 +45,7 @@
     "feed": "^4.2.2",
     "framer-motion": "^10.12.2",
     "hast-util-from-html": "^1.0.1",
+    "hast-util-is-javascript": "^2.0.0",
     "hast-util-select": "^5.0.5",
     "hast-util-to-text": "^3.1.2",
     "hastscript": "^7.2.0",
@@ -51,6 +53,7 @@
     "hyperid": "^3.1.1",
     "lodash": "^4.17.21",
     "luxon": "^3.3.0",
+    "mdast-util-to-string": "^3.2.0",
     "nanostores": "^0.7.4",
     "postcss": "^8.4.21",
     "postcss-lab-function": "^4.2.1",
@@ -62,17 +65,21 @@
     "reading-time": "^1.5.0",
     "rehype-infer-reading-time-meta": "^1.1.0",
     "rehype-parse": "^8.0.4",
+    "rehype-raw": "^6.1.1",
     "rehype-react": "^7.2.0",
     "rehype-stringify": "^9.0.3",
     "sass": "^1.62.0",
     "satori": "^0.4.9",
+    "sharp": "^0.32.0",
     "shiki": "^0.14.1",
     "tailwindcss": "^3.3.1",
     "twitter-text": "^3.1.0",
     "unified": "^10.1.2",
+    "unist-util-select": "^4.0.3",
     "unist-util-visit": "^4.1.2"
   },
   "devDependencies": {
+    "@testing-library/dom": "^9.2.0",
     "@types/chroma-js": "^2.4.0",
     "@types/lodash": "^4.14.194",
     "@types/luxon": "^3.3.0",
@@ -80,6 +87,15 @@
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.35",
     "@types/react-dom": "18.0.10",
-    "vercel": "^28.18.5"
+    "dotenv": "^16.0.3",
+    "gray-matter": "^4.0.3",
+    "jsdom": "^21.1.1",
+    "prettier-plugin-css-order": "^1.3.0",
+    "prettier-plugin-tailwindcss": "^0.2.7",
+    "turndown": "^7.1.2",
+    "turndown-plugin-gfm": "^1.0.2",
+    "vercel": "^28.18.5",
+    "vitest": "^0.30.1",
+    "vitest-fixture": "^0.5.1"
   }
 }
