--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "turndown": "^7.1.2",
     "turndown-plugin-gfm": "^1.0.2",
     "vercel": "^28.18.5",
+    "vite-plugin-lightningcss": "^0.0.5",
     "vitest": "^0.30.1",
     "vitest-fixture": "^0.5.1"
   }
