--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "nanostores": "^0.7.4",
     "postcss": "^8.4.21",
     "postcss-lab-function": "^4.2.1",
+    "postcss-preset-env": "^8.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-popper": "^2.3.0",
