--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "luxon": "^3.1.1",
     "next": "13.3.0",
     "postcss": "^8.4.20",
+    "postcss-import": "^15.1.0",
     "postcss-lab-function": "^4.2.1",
     "postcss-preset-env": "^8.3.2",
     "react": "18.2.0",
