--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 src/**/*.png filter=lfs diff=lfs merge=lfs -text
 src/**/*.jpg filter=lfs diff=lfs merge=lfs -text
+./**/*.woff filter=lfs diff=lfs merge=lfs -text
+./**/*.woff2 filter=lfs diff=lfs merge=lfs -text
